--- a/ConsoleFileOps/TextFileOperations/PersonDataFileOperations.csproj
+++ b/ConsoleFileOps/TextFileOperations/PersonDataFileOperations.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextFileRepository.cs" />
     <Compile Include="FileService.cs" />
+    <Compile Include="TextFileSchedulingAccessToCPURepository.cs" />
     <Compile Include="XmlDomFileRepository.cs" />
     <Compile Include="XmlFileRepository.cs" />
   </ItemGroup>
