--- a/PageReplacementAlgorithm/PageReplacementAlgorithm/PageReplacementAlgorithm.csproj
+++ b/PageReplacementAlgorithm/PageReplacementAlgorithm/PageReplacementAlgorithm.csproj
@@ -39,8 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FifoPRA.cs" />
     <Compile Include="Interfaces\IPageReplacementAlgorithm.cs" />
+    <Compile Include="LruAproxPRA.cs" />
+    <Compile Include="LruPRA.cs" />
+    <Compile Include="OptPRA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandPRA.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
