--- a/PageReplacementAlgorithm/PageReplacementAlgorithm/PageReplacementAlgorithm.csproj
+++ b/PageReplacementAlgorithm/PageReplacementAlgorithm/PageReplacementAlgorithm.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,11 +44,15 @@
   <ItemGroup>
     <Compile Include="FifoPRA.cs" />
     <Compile Include="Interfaces\IPageReplacementAlgorithm.cs" />
+    <Compile Include="KlasaDoTestowania.cs" />
     <Compile Include="LruAproxPRA.cs" />
     <Compile Include="LruPRA.cs" />
     <Compile Include="OptPRA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandPRA.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
