--- a/PageReplacementAlgorithm/PageReplacementAlgorithm/PageReplacementAlgorithm.csproj
+++ b/PageReplacementAlgorithm/PageReplacementAlgorithm/PageReplacementAlgorithm.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agregate\LruAgregate.cs" />
     <Compile Include="FifoPRA.cs" />
     <Compile Include="Interfaces\IPageReplacementAlgorithm.cs" />
     <Compile Include="KlasaDoTestowania.cs" />
