--- a/PageReplacementAlgorithm/FramesDispenser/FramesDispenser.csproj
+++ b/PageReplacementAlgorithm/FramesDispenser/FramesDispenser.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EqualAlocation.cs" />
     <Compile Include="Interfaces\IDispenser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProportionalAlocation.cs" />
